[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Axel Karjalainen <axel@axka.fi>"]
readme = "README.md"
repository = "https://github.com/axelkar/dt-tools"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
dt-parser.path = "./crates/dt-parser"
dt-analyzer.path = "./crates/dt-analyzer"
dt-lint.path = "./crates/dt-lint"
dt-diagnostic.path = "./crates/dt-diagnostic"
tracing = "0.1.40"
dashmap = "6.0.1"
rustc-hash = "2.0.0"
itertools = "0.14.0"
tracing-subscriber = "0.3.18"
pretty_assertions = "1.4.0"
owo-colors = "4.0.0"
parking_lot = "0.12.3"
rayon = "1.10.0"
logos = "0.15.0"
thiserror = "2.0"
displaydoc = "0.2.5"
serde_json = "1.0"
either = "1.15"
serde = "1"
fs-err = "3.1.0"

[workspace.lints.rust]
# https://github.com/rust-lang/rust/issues/95513
#unused_crate_dependencies = "warn"
unsafe_code = "deny" # Not in this project's scope currently

[workspace.lints.clippy]
pedantic = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
should_panic_without_expect = "warn"
match_wildcard_for_single_variants = { level = "allow", priority = 1 }
