[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Axel Karjalainen <axel@axka.fi>"]
rust-version = "1.91" # Same as Nixpkgs 25.11, a sane default
readme = "README.md"
repository = "https://github.com/axelkar/dt-tools"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
dt-tools-parser.path = "./crates/parser"
dt-tools-analyzer.path = "./crates/analyzer"
dt-tools-lint.path = "./crates/lint"
dt-tools-diagnostic.path = "./crates/diagnostic"
dt-tools-workspace.path = "./crates/workspace"
tracing = "0.1.40"
#dashmap = "7.0.0-rc2" # experimental version for entry_ref support
# https://github.com/xacrimon/dashmap/pull/367
dashmap = { git = "https://github.com/axelkar/dashmap" }
rustc-hash = "2.0.0"
itertools = "0.14.0"
tracing-subscriber = "0.3.18"
pretty_assertions = "1.4.0"
owo-colors = "4.0.0"
parking_lot = "0.12.3"
rayon = "1.10.0"
logos = "0.16.0"
thiserror = "2.0"
displaydoc = "0.2.5"
serde_json = "1.0"
serde_yaml = "0.9.33"
either = "1.15"
serde = "1"
fs-err = "3.1.0"
salsa = "0.26.0"
camino = "1.2.1" # UTF-8 paths
tower-lsp-server = "0.23.0"
fluent-uri = "0.4.1"
codespan-reporting = "0.13.1"
expect-test = "1.5.1"

[workspace.lints.rust]
# https://github.com/rust-lang/rust/issues/95513
#unused_crate_dependencies = "warn"
unsafe_code = "deny" # Not in this project's scope currently

[workspace.lints.clippy]
pedantic = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
should_panic_without_expect = "warn"
str_to_string = "warn"
implicit_clone = "warn"
match_wildcard_for_single_variants = { level = "allow", priority = 1 }
