[package]
name = "dt-tools-binding"
edition = "2024"
description = "Devicetree binding matcher"
keywords = ["devicetree"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
serde_yaml.workspace = true
dt-tools-analyzer.workspace = true
anyhow = { version = "1.0.71", features = ["backtrace"] }
fluent-uri.workspace = true
boon = "0.6.1"
fs-err.workspace = true

[dev-dependencies]
dt-tools-parser.workspace = true

[lints]
workspace = true
