[package]
name = "dt-analyzer"
edition = "2024"
description = "Devicetree analyzer"
keywords = ["devicetree"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dt-parser.workspace = true
dt-diagnostic.workspace = true
tracing.workspace = true # TODO: remove, this is only for debugging
either.workspace = true
serde_json.workspace = true
thiserror.workspace = true
vec1 = "1.10.1"
rustc-hash.workspace = true
rayon.workspace = true
enum-as-inner = "0.7.0"
derive_more = { version = "2.0", features = ["debug"] }
displaydoc.workspace = true
expect-test.workspace = true
camino.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
codespan-reporting.workspace = true
owo-colors.workspace = true
pretty_assertions.workspace = true
dt-diagnostic = { workspace = true, features = ["codespan-reporting"] }

[lints]
workspace = true
