[package]
name = "dt-binding-matcher"
edition = "2021"
description = "Devicetree binding matcher"
keywords = ["devicetree"]

version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
jsonschema = { version = "0.18.0", default-features = false, features = [ "draft201909", "draft202012" ] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.33"
dt-analyzer.workspace = true
dt-parser.workspace = true
url = "2.4.0"
anyhow = { version = "1.0.71", features = ["backtrace"] }
once_cell = "1.19.0"
