[package]
name = "dt-binding-matcher"
edition = "2021"
description = "Devicetree binding matcher"
keywords = ["devicetree"]

version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
jsonschema = { version = "0.30.0", default-features = false }
serde_json = "1.0.115"
serde_yaml = "0.9.33"
dt-analyzer.workspace = true
url = "2.4.0"
anyhow = { version = "1.0.71", features = ["backtrace"] }
once_cell = "1.19.0"
fluent-uri = "0.3.2"

[dev-dependencies]
dt-parser.workspace = true

[lints]
workspace = true
