[package]
name = "dt-cli"
edition = "2021"
description = "Devicetree CLI"
keywords = ["devicetree"]
categories = ["compilers", "development-tools", "command-line-utilities"]

version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
codespan-reporting = "0.12.0"
tracing-subscriber.workspace = true
dt-parser.workspace = true
dt-lint.workspace = true
dt-analyzer.workspace = true

[lints]
workspace = true
