[package]
name = "dt-tools-cli"
edition = "2024"
description = "Devicetree CLI"
keywords = ["devicetree"]
categories = ["compilers", "development-tools", "command-line-utilities"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
tracing-subscriber.workspace = true
dt-tools-parser.workspace = true
dt-tools-lint.workspace = true
dt-tools-analyzer.workspace = true
dt-tools-workspace = { workspace = true, features = ["cli"] }
codespan-reporting.workspace = true
dt-tools-diagnostic = { workspace = true, features = ["codespan-reporting"] }
camino.workspace = true

[lints]
workspace = true
