[package]
name = "dt-diagnostic"
edition = "2024"
description = "dt-tools diagnostic library"
keywords = ["devicetree"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
parking_lot = { workspace = true, optional = true }
codespan-reporting = { workspace = true, optional = true }

[features]
## Enables implementation of DiagnosticCollector for parking_lot::Mutex<Vec<Diagnostic>>
parking_lot = ["dep:parking_lot"]
## Enables conversion from dt_diagnostic's diagnostic to codespan_reporting's diagnostic type
codespan-reporting = ["dep:codespan-reporting"]

[lints]
workspace = true
