[package]
name = "dt-fmt"
edition = "2021"
description = "Devicetree formatter"
keywords = ["devicetree"]
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dt-parser.workspace = true
