[package]
name = "dt-fmt"
edition = "2021"
description = "Devicetree formatter"
keywords = ["devicetree"]
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dt-parser.workspace = true

[lints]
workspace = true
