[package]
name = "dt-tools-fmt"
edition = "2024"
description = "Devicetree formatter"
keywords = ["devicetree"]
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dt-tools-parser.workspace = true

[lints]
workspace = true
