[package]
name = "dt-lint"
edition = "2021"
description = "Devicetree linter"

version.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dt-parser.workspace = true
itertools = "0.13.0"
tracing = "0.1.40"
