[package]
name = "dt-lint"
edition = "2021"
description = "Devicetree linter"
keywords = ["devicetree"]
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dt-parser.workspace = true
tracing.workspace = true

[lints]
workspace = true
