[package]
name = "dt-tools-lint"
edition = "2024"
description = "Devicetree linter"
keywords = ["devicetree"]
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dt-tools-parser.workspace = true
dt-tools-diagnostic.workspace = true
tracing.workspace = true

[lints]
workspace = true
