[package]
name = "dt-lsp"
edition = "2021"
description = "Devicetree language server"
keywords = ["devicetree"]
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
compact_str = "0.8.0"
dashmap.workspace = true
ropey = "1.6.1"
smallstr = "0.3.0"
smallvec = "1.13.1"
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread", "macros", "io-std", "net", "io-util"] }
tower-lsp = "0.20.0"
dt-parser.workspace = true
dt-analyzer.workspace = true
dt-lint.workspace = true
parking_lot.workspace = true
itertools.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rayon.workspace = true
axka-rcu = { version = "1.0.0", features = ["triomphe"] }
rustc-hash.workspace = true
thiserror = "1.0.63"
dt-diagnostic = { workspace = true, features = ["parking_lot"] }
