[package]
name = "dt-lsp"
edition = "2021"
description = "Devicetree language server"
keywords = ["devicetree"]
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dashmap.workspace = true
ropey = "1.6.1"
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread", "macros", "io-std", "net", "io-util"] }
tower-lsp-server = "0.22.1"
fluent-uri = "0.1.4" # lsp-types compat
dt-parser.workspace = true
dt-analyzer.workspace = true
dt-lint.workspace = true
parking_lot.workspace = true
itertools.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rayon.workspace = true
triomphe = "0.1.15"
rustc-hash.workspace = true
dt-diagnostic = { workspace = true, features = ["parking_lot"] }

[lints]
workspace = true
