[package]
name = "dt-tools-lsp"
edition = "2024"
description = "Devicetree language server"
keywords = ["devicetree"]
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
dashmap.workspace = true
ropey = "1.6.1"
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread", "macros", "io-std", "net", "io-util"] }
tower-lsp-server.workspace = true
fluent-uri.workspace = true
dt-tools-parser.workspace = true
dt-tools-analyzer.workspace = true
dt-tools-lint.workspace = true
parking_lot.workspace = true
itertools.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rayon.workspace = true
triomphe = "0.1.15"
rustc-hash.workspace = true
dt-tools-diagnostic = { workspace = true, features = ["parking_lot"] }
salsa.workspace = true
camino.workspace = true
dt-tools-workspace.workspace = true

[lints]
workspace = true
