[package]
name = "dt-parser"
edition = "2021"
description = "Error-resilient Devicetree parser"
keywords = ["devicetree"]
categories = ["parser-implementations"]

version.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bstr = "1.10"
drop_bomb = "0.1"
either = "1.13"
enum-as-inner = "0.6"
itertools.workspace = true
logos.workspace = true
smallvec = "1.13"
thiserror = "1.0"
tracing.workspace = true
dt-diagnostic.workspace = true

[dev-dependencies]
notify = "6.1.1"
owo-colors.workspace = true
pretty_assertions.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json = "1.0" # visualizer

[features]
default = []
grammar-tracing = []
visualize = []
