[package]
name = "dt-parser"
edition = "2021"
description = "Error-resilient Devicetree parser"
keywords = ["devicetree"]
categories = ["parser-implementations"]

version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
drop_bomb = "0.1"
either.workspace = true
enum-as-inner = "0.6"
itertools.workspace = true
logos.workspace = true
smallvec = "1.13"
thiserror.workspace = true
tracing.workspace = true
dt-diagnostic.workspace = true
displaydoc.workspace = true

[dev-dependencies]
notify = "8.0.0"
owo-colors.workspace = true
pretty_assertions.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json.workspace = true

[features]
default = []
grammar-tracing = []
visualize = []

[lints]
workspace = true
