[package]
name = "dt-workspace"
edition = "2024"
version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
fs-err = { version = "3.1.0", features = ["expose_original_error"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.20"
