[package]
name = "dt-workspace"
edition = "2024"
version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
envy = "0.4.2"
fs-err = { workspace = true, features = ["expose_original_error"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
toml = "0.8.20"

[features]
cli = []
