[package]
name = "dt-tools-workspace"
edition = "2024"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.37", features = ["derive"], optional = true }
envy = "0.4.2"
fs-err = { workspace = true, features = ["expose_original_error"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
toml = "1.1.0"
camino = { workspace = true, features = ["serde1"] }

[features]
cli = ["dep:clap"]
